--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app" class="min-h-full py-10 bg-gray-700"></div>
+    <div id="app" class="min-h-screen py-10 bg-gray-700"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
