--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Gmail mobile app clone using Tailwind and Vite</title>
   </head>
   <body>
     <div id="app" class="min-h-screen py-10 bg-gray-100 dark:bg-gray-700"></div>
